fix: altera gap no main

--- a/css/styles.css
+++ b/css/styles.css
@@ -40,7 +40,7 @@
         flex: 1;
         padding-inline: 200px;
         padding-block: 20px;
-        gap: 50px;
+        gap: 36px;
     }
     
     img {
